fixed footer text

--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -14,7 +14,7 @@
 <body>
 	<nav class="navbar navbar-dark navbar-expand-md bg-success justify-content-between">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
-			<span class="navbar-toggler-icon"></span>
+			<span class="navbar-toggtler-icon"></span>
 		</button>
 		<div class="navbar-collapse collapse dual-nav w-100">
 			<ul class="navbar-nav">
@@ -64,7 +64,7 @@
 				Leslie Burugu &copy;2018
 			</p>
 			<p>Hello books is a test site,but you download and customize it for yourself!</p>
-			<p>New to Bootstrap?
+			<p>New to Hello Books?
 				<a href="#">Visit the homepage</a>
 		</div>
 	</footer>
