--- a/designs/UI/registration.html
+++ b/designs/UI/registration.html
@@ -35,7 +35,7 @@
 										<div class="invalid-feedback">Enter your password too!</div>
 									</div>
 									<div class="form-group">
-										<label>Password</label>
+										<label>Confirm Password</label>
 										<input type="password" class="form-control form-control-lg rounded-0" required="" placeholder="Enter password again">
 										<div class="invalid-feedback">Enter your password again</div>
 									</div>
