--- a/designs/UI/registration.html
+++ b/designs/UI/registration.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+	<nav class="navbar navbar-dark navbar-expand-md bg-success justify-content-between">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+			<span class="navbar-toggtler-icon"></span>
+		</button>
+		<div class="navbar-collapse collapse dual-nav w-100">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link pl-0" href="#">Home
+						<span class="sr-only">Home</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<a href="/" class="navbar-brand mx-auto d-block text-center w-100">Hello Books</a>
+		<div class="navbar-collapse collapse dual-nav w-100">
+		</div>
+	</nav>
 	<div class="container py-5">
 		<div class="row">
 			<div class="col-md-12">
