Add link to borrowing hsitory page

--- a/designs/UI/profile.html
+++ b/designs/UI/profile.html
@@ -58,6 +58,7 @@
 							</div>
 						</div>
 						<!--/row-->
+						<a href="borrowing-history.html">View Borrowing history</a>
 					</div>
 					<div class="tab-pane" id="borrowed">
 						<table class="table table-hover table-striped">
