Add sign up and login links

--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -53,8 +53,8 @@
 				pages.
 			</p>
 			<p>
-				<a class="btn btn-primary btn-lg" href="#">Sign up</a>
-				<a class="btn btn-outline-primary btn-lg" href="#">Log in</a>
+				<a class="btn btn-primary btn-lg" href="registration.html">Sign up</a>
+				<a class="btn btn-outline-primary btn-lg" href="login.html">Log in</a>
 			</p>
 		</div>
 	</main>
@@ -65,7 +65,7 @@
 			</p>
 			<p>Hello books is a test site,but you download and customize it for yourself!</p>
 			<p>New to Hello Books?
-				<a href="#">Visit the homepage</a>
+				<a href="index.html">Visit the homepage</a>
 		</div>
 	</footer>
 
