--- a/designs/UI/view-all-books.html
+++ b/designs/UI/view-all-books.html
@@ -41,8 +41,7 @@
 								<p class="card-text">book one</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+										<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
 									</div>
 								</div>
 							</div>
@@ -55,8 +54,8 @@
 								<p class="card-text">book two</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+										<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -69,8 +68,8 @@
 								<p class="card-text">book three</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -83,8 +82,8 @@
 								<p class="card-text">book four</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -97,8 +96,8 @@
 								<p class="card-text">book five</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -111,8 +110,8 @@
 								<p class="card-text">book six</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 
 								</div>
@@ -126,8 +125,8 @@
 								<p class="card-text">book seven</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -140,8 +139,8 @@
 								<p class="card-text">book eight</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+											<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
@@ -154,8 +153,8 @@
 								<p class="card-text">book nine</p>
 								<div class="d-flex justify-content-between align-items-center">
 									<div class="btn-group">
-										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+										<a class="btn btn-sm btn-outline-secondary" href="borrow-books.html">view</a>
+
 									</div>
 								</div>
 							</div>
