Fixes text on landing page

--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -49,8 +49,7 @@
 	<main role="main">
 		<div class="col-md-5 p-lg-5 mx-auto my-5">
 			<h1 class="display-4 font-weight-normal">The future of books.</h1>
-			<p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing
-				pages.
+			<p class="lead font-weight-normal">Jumpstart your reading today with our amazing catalogue of books. 
 			</p>
 			<p>
 				<a class="btn btn-primary btn-lg" href="registration.html">Sign up</a>
